--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
+    "mathjs": "^5.4.2",
     "vue": "^2.5.22"
   },
   "devDependencies": {
