--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js -b gh-pages"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "mathjs": "^5.4.2",
     "normalize.css": "^8.0.1",
-    "vue": "^2.5.22"
+    "vue": "^2.5.22",
+    "vue-gh-pages": "^1.19.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
@@ -76,6 +78,7 @@
     "testMatch": [
       "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
     ],
-    "testURL": "http://localhost/"
+    "testURL": "http://localhost/",
+    "homepage": "https://github.com/v86861062/vue-calculator"
   }
 }
